--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             <h3>Automatización</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Automatización">
+                            <img src="img/servicios/automatizacion.jpg" alt="Automatización">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -332,7 +332,7 @@
                             <h3>Medidores para agua</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Medidores para agua">
+                            <img src="img/servicios/medidores_agua.jpg" alt="Medidores para agua">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -340,7 +340,7 @@
                             <h3>Calentadores solares</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Calentadores solares">
+                            <img src="img/servicios/calentadores_solares.jpg" alt="Calentadores solares">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -348,7 +348,7 @@
                             <h3>Toboganes</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Toboganes">
+                            <img src="img/servicios/toboganes.jpg" alt="Toboganes">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
