--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         </div>
                         <div class="contenido-tarjeta">
                             <div class="contenido-tarjeta">
-                                <img src="img/servicios/" alt="Recubrimientos">
+                                <img src="img/servicios/recubrimientos_piscina.jpg" alt="Recubrimientos">
                             </div>
                         </div>
                     </article>
@@ -366,7 +366,7 @@
                             <h3>Hidromasaje</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Hidromasaje">
+                            <img src="img/servicios/piscina_hidromasaje.jpg" alt="Hidromasaje">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -374,7 +374,7 @@
                             <h3>Iluminación</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Iluminación">
+                            <img src="img/servicios/iluminacion_piscina.jpg" alt="Iluminación">
                         </div>
                     </article>
                 </div>
