--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     class="icono-informacion-seccion mt-4"
                     src="img/iconos/information-button.png" 
                     alt="Icono servicios">
-                    <h1 class="text-center b-b-3px-c-secundario fst-italic m-0">
+                    <h1 class="text-center b-b-3px-c-secundario fst-italic m-0 subtitulos">
                         Nuestro servicio:
                     </h1>
                 </div>
