--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     </script>
 </head>
 <body>
+    <div class="load-container visble">
+        <span class="carga-spinner spinner-a"></span>
+        <span class="carga-spinner spinner-b"></span>
+    </div>
     <header class="site-header inicio">
         <div class="col-12 col-md-6">
             <div class="contenedor contenido-header d-none">
