--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 class="d-block w-100">
                 <div class="carousel-caption d-flex">
                     <div class="p-r">
-                        <div class="font-size-120px line-height-normal-60p">
+                        <div class="font-size-120px line-height-normal-60p titulo-header">
                             <p class="text-white titulo-principal">ALBERCAS</p>
                             <p class="text-white mb-5 titulo-principal">DEL MAR</p>
                         </div>
