--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                             <h3>Quimicos</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Quimicos">
+                            <img src="img/servicios/quimicos_oficina.jpg" alt="Quimicos">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -396,7 +396,7 @@
                             <h3>Escaleras</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Escaleras">
+                            <img src="img/servicios/escaleras_piscinas.jpg" alt="Escaleras">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -404,7 +404,7 @@
                             <h3>Pasamanos</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Pasamanos">
+                            <img src="img/servicios/pasamanos_piscina.jpg" alt="Pasamanos">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
