--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                             <h3>Nado contra corriente</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Nado contra corriente">
+                            <img src="img/servicios/nado_contra_corriente.png" alt="Nado contra corriente">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -420,7 +420,7 @@
                             <h3>Biodigestores</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Biodigestores">
+                            <img src="img/servicios/biodigestores.jpg" alt="Biodigestores">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -428,7 +428,7 @@
                             <h3>Tinacos</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/" alt="Tinacos">
+                            <img src="img/servicios/tinaco_colocacion.jpg" alt="Tinacos">
                         </div>
                     </article>
                 </div>
