--- a/servicios.html
+++ b/servicios.html
@@ -39,6 +39,10 @@
     </script>
 </head>
 <body>
+    <div class="load-container visble">
+        <span class="carga-spinner spinner-a"></span>
+        <span class="carga-spinner spinner-b"></span>
+    </div>
     <header class="site-header inicio">
         <div class="row mx-0">
             <div class="col-12 col-md-6 p-0">
