--- a/nosotros.html
+++ b/nosotros.html
@@ -93,7 +93,7 @@
             </div>
         </article>
     </section>
-    <h2 class="fw-300 text-center mb-0 titulo-descriptivo mt-4 mb-4">Conoce Sobre Nosotros</h2>
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">Conoce Sobre Nosotros</h2>
     <main class="contenedor">
         <div class="contenido-nosotros">
             <div class="imagen">
@@ -114,28 +114,34 @@
             </div>
         </div>
     </main>
-    <h2 class="fw-300 text-center mb-0 titulo-descriptivo my-4">Más Sobre Nosotros</h2>
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">Más Sobre Nosotros</h2>
     <section class="contenedor seccion">
         <div class="iconos-nosotros">
             <div class="icono">
                 <img src="img/icono1.svg" alt="Icono Equipos">
-                <h3>Equipos</h3>
-                <p>Una alberca que funciona sin problemas es una alberca que trabaja con los mejores equipos y que son
-                    los adecuados para sus necesidades .</p>
+                <h3 class="subtitulos">Equipos</h3>
+                <p>
+                    Una alberca que funciona sin problemas es una alberca que trabaja con los mejores equipos y que son
+                    los adecuados para sus necesidades.
+                </p>
             </div>
 
             <div class="icono">
                 <img src="img/icono2.svg" alt="Icono Construcción">
-                <h3>Construcción</h3>
-                <p>Tener en cuenta factores como los materiales, la superficie, las dimensiones, los equipos y los
-                    accesorios es parte escencial para un proyecto exitoso.</p>
+                <h3 class="subtitulos">Construcción</h3>
+                <p>
+                    Tener en cuenta factores como los materiales, la superficie, las dimensiones, los equipos y los
+                    accesorios es parte escencial para un proyecto exitoso.
+                </p>
             </div>
 
             <div class="icono">
                 <img src="img/icono3.svg" alt="Icono Vanguardia">
-                <h3>Vanguardia</h3>
-                <p>Soluciones tecnológicas y productos de última generación que responden a la demanda de tranquilidad,
-                    comodidad, ahorro y mejor funcionamiento.</p>
+                <h3 class="subtitulos">Vanguardia</h3>
+                <p>
+                    Soluciones tecnológicas y productos de última generación que responden a la demanda de tranquilidad,
+                    comodidad, ahorro y mejor funcionamiento.
+                </p>
             </div>
         </div>
     </section>
