--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,7 @@
         gtag('config', 'G-9VQQ8DSKZG');
     </script>
 </head>
-<body>
+<body class="none-scrollY">
     <div class="load-container visble">
         <span class="carga-spinner spinner-a"></span>
         <span class="carga-spinner spinner-b"></span>
@@ -100,17 +100,20 @@
                 <img src="img/alberca.png" alt="Imagen Sobre Nosotros">
             </div>
             <div class="texto-nosotros">
-                <blockquote>30 Años de Experiencia</blockquote>
-                <h2>Misión</h2>
-                <p>Bien y a la primera, garantizado nuestro trabajo, con la calidad que nos distingue, apoyándonos en
+                <blockquote class="subtitulos">30 Años de Experiencia</blockquote>
+                <h2 class="subtitulos">Misión</h2>
+                <p>
+                    Bien y a la primera, garantizado nuestro trabajo, con la calidad que nos distingue, apoyándonos en
                     nuestra experiencia de más de 30 años en el mercado laboral, teniendo como referencia nuestros
-                    trabajos realizados a las distintas empresas y organizaciones , tanto públicas como privadas.</p>
-
-                <h2>Visión</h2>
-                <p>Ser siempre de las primeras empresas especializadas en Sistemas de Acondicionado, manteniendo
+                    trabajos realizados a las distintas empresas y organizaciones , tanto públicas como privadas.
+                </p>
+                <h2 class="subtitulos">Visión</h2>
+                <p>
+                    Ser siempre de las primeras empresas especializadas en Sistemas de Acondicionado, manteniendo
                     nuestros estándares de calidad a la vanguardia, yendo de la mano con el avance tecnológico en todos
                     nuestros proyectos y mantenernos en constante crecimiento ingresando a nuevos mercados, incluso
-                    internacionales.</p>
+                    internacionales.
+                </p>
             </div>
         </div>
     </main>
