--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         gtag('config', 'G-9VQQ8DSKZG');
     </script>
 </head>
-<body>
+<body class="none-scrollY">
     <div class="load-container visble">
         <span class="carga-spinner spinner-a"></span>
         <span class="carga-spinner spinner-b"></span>
