--- a/contacto.html
+++ b/contacto.html
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="col-12 bg-white p-3 p-lg-5 mt-5">
-                        <h3 class="text-center titulo-principal w-auto mb-4">
+                        <h3 class="text-center w-auto mb-4">
                             Solicito personal para el Área de Ingeniería Civil, con experiencia en la realización de las siguientes Actividades:
                         </h3>
                         <div class="card mx-auto bg-white">
