--- a/index.html
+++ b/index.html
@@ -44,27 +44,6 @@
         <span class="carga-spinner spinner-b"></span>
     </div>
     <header class="site-header inicio">
-        <div class="col-12 col-md-6">
-            <div class="contenedor contenido-header d-none">
-                <div class="barra">
-                    <a href="/">
-                        <img src="img/alb_logo.svg" alt="Logotipo de Bienes Raices">
-                    </a>
-                    <div class="mobile-menu">
-                        <a href="#navegacion">
-                            <img src="img/barras.svg" alt="Icono Menu">
-                        </a>
-                    </div>
-                    <nav id="navegacion" class="navegacion">
-                        <a href="nosotros.html">Nosotros</a>
-                        <a href="anuncios.html">Anuncios</a>
-                        <a href="blog.html">Galeria</a>
-                        <a href="contacto.html">Contacto</a>
-                    </nav>
-                </div>
-                <h1>Diseño y construcción de albercas</h1>
-            </div>
-        </div>
         <div class="row mx-0">
             <div class="col-12 col-md-6 p-0">
                 <div class="logo mx-auto">
@@ -93,7 +72,7 @@
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
                                 <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
                                 <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3 d-none" href="servicios.html">Servicios</a>
+                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
                                 <a class="nav-link p-3 d-none" href="galeria.html">Galería</a>
                                 <a class="nav-link p-3" href="contacto.html">Contacto</a>
                             </div>
