--- a/servicios.html
+++ b/servicios.html
@@ -72,7 +72,7 @@
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
                                 <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
                                 <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3 d-none" href="servicios.html">Servicios</a>
+                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
                                 <a class="nav-link p-3 d-none" href="galeria.html">Galería</a>
                                 <a class="nav-link p-3" href="contacto.html">Contacto</a>
                             </div>
@@ -83,13 +83,22 @@
         </div>
     </header>
     <section class="informacion-principal-nosotros">
-        <article class="imagen-fondo row mx-0 p-r">
+        <article class="imagen-fondo img-fondo-servicios row mx-0 p-r">
             <div class="sombra-seccion"></div>
-            <div class="text-white col-6 mx-auto my-auto titulo-seccion z-index-10 fondo-seccion">
-                <span class="bineta mx-auto w-auto"></span>
-                Apoyamos desde el diseño de su proyecto con la elaboración de planos arquitectónicos, estructurales, eléctrico e
-                hidrosanitarios, estudios del área para futura construcción e instalación de equipo. Permisos para construir su alberca
-                y la viabilidad de su proyecto.
+            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion">
+                <span class="linea-horizontal mx-auto w-auto"></span>
+                <div class="text-center d-flex justify-content-center align-items-center">
+                    <div class="bineta-circle"></div>
+                    Mantenimiento y limdivieza
+                </div> 
+                <div class="text-center d-flex align-items-center">
+                    <div class="bineta-circle"></div>
+                    Atención personzalizada con servicio de asistencia 24 hrs. los 365 días de año.
+                </div>
+                <div class="text-center d-flex align-items-center">
+                    <div class="bineta-circle"></div>
+                    Analisis de su instalación y mantenimiento para producir los consumos de agua y electricidad.
+                </div>
             </div>
         </article>
     </section>
