--- a/nosotros.html
+++ b/nosotros.html
@@ -72,7 +72,7 @@
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
                                 <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
                                 <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3 d-none" href="servicios.html">Servicios</a>
+                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
                                 <a class="nav-link p-3 d-none" href="galeria.html">Galería</a>
                                 <a class="nav-link p-3" href="contacto.html">Contacto</a>
                             </div>
@@ -85,8 +85,8 @@
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo row mx-0 p-r">
             <div class="sombra-seccion"></div>
-            <div class="text-white col-6 mx-auto my-auto titulo-seccion z-index-10 fondo-seccion">
-                <span class="bineta mx-auto w-auto"></span>
+            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion">
+                <span class="linea-horizontal mx-auto w-auto"></span>
                 Apoyamos desde el diseño de su proyecto con la elaboración de planos arquitectónicos, estructurales, eléctrico e
                 hidrosanitarios, estudios del área para futura construcción e instalación de equipo. Permisos para construir su alberca
                 y la viabilidad de su proyecto.
