--- a/nosotros.html
+++ b/nosotros.html
@@ -85,7 +85,7 @@
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo row mx-0 p-r">
             <div class="sombra-seccion"></div>
-            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion">
+            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header">
                 <span class="linea-horizontal mx-auto w-auto"></span>
                 Apoyamos desde el diseño de su proyecto con la elaboración de planos arquitectónicos, estructurales, eléctrico e
                 hidrosanitarios, estudios del área para futura construcción e instalación de equipo. Permisos para construir su alberca
