--- a/contacto.html
+++ b/contacto.html
@@ -85,8 +85,8 @@
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo imagen-fondo-b row mx-0 p-r">
             <div class="sombra-seccion"></div>
-            <div class="text-white col-6 mx-auto my-auto titulo-seccion z-index-10 fondo-seccion">
-                <span class="bineta mx-auto w-auto"></span>
+            <div class="text-white col-6 mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header">
+                <span class="linea-horizontal mx-auto w-auto"></span>
                 Para visitas, levantamiento de obra y/o cotizaciones de servicios, póngase en contacto con nosotros:
             </div>
         </article>
