--- a/servicios.html
+++ b/servicios.html
@@ -89,15 +89,15 @@
                 <span class="linea-horizontal mx-auto w-auto"></span>
                 <div class="text-center d-flex justify-content-center align-items-center">
                     <div class="bineta-circle"></div>
-                    Mantenimiento y limdivieza
+                    Mantenimiento y limpieza
                 </div> 
                 <div class="text-center d-flex align-items-center">
                     <div class="bineta-circle"></div>
-                    Atención personzalizada con servicio de asistencia 24 hrs. los 365 días de año.
+                    Atención personalizada con servicio de asistencia las 24 hrs del día. los 365 días de año.
                 </div>
                 <div class="text-center d-flex align-items-center">
                     <div class="bineta-circle"></div>
-                    Analisis de su instalación y mantenimiento para producir los consumos de agua y electricidad.
+                    Análisis de su instalación y mantenimiento para producir los consumos de agua y electricidad.
                 </div>
             </div>
         </article>
