--- a/servicios.html
+++ b/servicios.html
@@ -99,55 +99,19 @@
                     <div class="bineta-circle"></div>
                     Análisis de su instalación y mantenimiento para producir los consumos de agua y electricidad.
                 </div>
+                <div class="text-center d-flex align-items-center">
+                    <div class="bineta-circle"></div>
+                    Construcción, reparación, rehabilitación y mantenimiento de albercas.
+                </div>
             </div>
         </article>
     </section>
-    <h2 class="fw-300 text-center mb-0 titulo-descriptivo mt-4 mb-4">Conoce Sobre Nosotros</h2>
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">
+        Construcción, reparación, rehabilitación y mantenimiento de albercas
+    </h2>
     <main class="contenedor">
-        <div class="contenido-nosotros">
-            <div class="imagen">
-                <img src="img/alberca.png" alt="Imagen Sobre Nosotros">
-            </div>
-            <div class="texto-nosotros">
-                <blockquote>30 Años de Experiencia</blockquote>
-                <h2>Misión</h2>
-                <p>Bien y a la primera, garantizado nuestro trabajo, con la calidad que nos distingue, apoyándonos en
-                    nuestra experiencia de más de 30 años en el mercado laboral, teniendo como referencia nuestros
-                    trabajos realizados a las distintas empresas y organizaciones , tanto públicas como privadas.</p>
-
-                <h2>Visión</h2>
-                <p>Ser siempre de las primeras empresas especializadas en Sistemas de Acondicionado, manteniendo
-                    nuestros estándares de calidad a la vanguardia, yendo de la mano con el avance tecnológico en todos
-                    nuestros proyectos y mantenernos en constante crecimiento ingresando a nuevos mercados, incluso
-                    internacionales.</p>
-            </div>
-        </div>
+        
     </main>
-    <h2 class="fw-300 text-center mb-0 titulo-descriptivo my-4">Más Sobre Nosotros</h2>
-    <section class="contenedor seccion">
-        <div class="iconos-nosotros">
-            <div class="icono">
-                <img src="img/icono1.svg" alt="Icono Equipos">
-                <h3>Equipos</h3>
-                <p>Una alberca que funciona sin problemas es una alberca que trabaja con los mejores equipos y que son
-                    los adecuados para sus necesidades .</p>
-            </div>
-
-            <div class="icono">
-                <img src="img/icono2.svg" alt="Icono Construcción">
-                <h3>Construcción</h3>
-                <p>Tener en cuenta factores como los materiales, la superficie, las dimensiones, los equipos y los
-                    accesorios es parte escencial para un proyecto exitoso.</p>
-            </div>
-
-            <div class="icono">
-                <img src="img/icono3.svg" alt="Icono Vanguardia">
-                <h3>Vanguardia</h3>
-                <p>Soluciones tecnológicas y productos de última generación que responden a la demanda de tranquilidad,
-                    comodidad, ahorro y mejor funcionamiento.</p>
-            </div>
-        </div>
-    </section>
     <footer class="site-footer">
         <div class="container">
             <div class="row mb-3">
