--- a/servicios.html
+++ b/servicios.html
@@ -109,8 +109,258 @@
     <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">
         Construcción, reparación, rehabilitación y mantenimiento de albercas
     </h2>
-    <main class="contenedor">
-        
+    <main class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h3 class="text-center">Albercas para:</h3>
+                <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Gimnasios</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/servicios/cascada_decorativa.jpg" alt="Gimnasios">
+                        </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Ayuntamiento</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/enrolladores_cubiertas_piscinas.jpg" alt="Ayuntamiento">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Conjuntos habitaciones</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/bomba_agua_piscina.jpg" alt="Conjuntos habitaciones">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Enramadas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/filtro_piscina.jpg" alt="Enramadas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Particulares</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/paneles_solares.jpg" alt="Particulares">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Salones de eventos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Salones de eventos">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Centros de rehabilitación física</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Centros de rehabilitación física">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Hospitales</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Hospitales">
+                    </div>
+                </article>
+                <!--  -->
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Escuelas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Escuelas">
+                    </div>
+                </article>
+                 <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Centros recreativos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Centros recreativos">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Balnearios</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Balnearios">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Centros comerciales</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Centros comerciales">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Oficinas corporativas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Oficinas corporativas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Deportivos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Deportivos">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Escuelas de natación</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Escuelas de natación">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Hoteles</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Hoteles">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Restaurantes</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Restaurantes">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Comercios</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Comercios">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Centros deportivos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/pozos_agua.jpg" alt="Centros deportivos">
+                    </div>
+                </article>
+            </div>
+            <div class="col-12 col-md-6">
+                <h3 class="text-center">Otros servicios:</h3>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Rehabilitación y reparación</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/automatizacion.jpg" alt="Rehabilitación y reparación">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Localización de fugas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/medidores_agua.jpg" alt="Localización de fugas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas semi construidas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/calentadores_solares.jpg" alt="Albercas semi construidas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Rehabilitación de piscinas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/toboganes.jpg" alt="Rehabilitación de piscinas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Reparación y sellado de fisuras y focos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <div class="contenido-tarjeta">
+                            <img src="img/servicios/recubrimientos_piscina.jpg" alt="Reparación y sellado de fisuras y focos">
+                        </div>
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Construcción de escaleras</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/piscina_hidromasaje.jpg" alt="Construcción de escaleras">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Renovación de conola y playa</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/iluminacion_piscina.jpg" alt="Renovación de conola y playa">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Iluminación</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/iluminacion_piscina.jpg" alt="Iluminación">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Climatización</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/iluminacion_piscina.jpg" alt="Climatización">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Sistemas depuraltes</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/iluminacion_piscina.jpg" alt="Sistemas depuraltes">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Reparación eléctrica</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/iluminacion_piscina.jpg" alt="Reparación eléctrica">
+                    </div>
+                </article>
+            </div>
+        </div>
     </main>
     <footer class="site-footer">
         <div class="container">
