--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                             <a href="mailto:info@albercasdelmar.com">info@albercasdelmar.com</a><br>
                         </li>
                         <li>
-                            <a href="mailto:construccionhl@yahoo.com">construccionhl@yahoo.com</a>
+                            <a href="mailto:construccionlc@yahoo.com">construccionlc@yahoo.com</a>
                         </li>
                     </ul>
                 </section>
