--- a/index.html
+++ b/index.html
@@ -158,17 +158,129 @@
                     class="icono-informacion-seccion mt-4"
                     src="img/iconos/information-button.png" 
                     alt="Icono servicios">
-                    <h1 class="text-center b-b-3px-c-secundario fst-italic m-0 subtitulos">
-                        Nuestro servicio:
+                    <h1 class="text-center b-b-3px-c-secundario fst-italic m-0 subtitulos mb-5">
+                        Nuestro servicios de construcción:
                     </h1>
                 </div>
-                <p>
-                    Diseño, reparación, mantenimiento y limpieza de albercas, desde lo residencial hasta lo comercial, incluido instalación
-                    de equipo, colocación de veneciano, cuarto de máquinas, bombas, pozos de agua, instalación de techos/maya sombra,
-                    instalación de paneles y calentadores solares para agua tibia, y cisternas.
+                <ol class="lista-numerica">
+                    <li>
+                        Diseño, reparación, mantenimiento y limpieza de albercas, desde lo residencial hasta lo comercial, incluido instalación
+                        de equipo.
+                    </li>
+                    <li>
+                        Colocación de veneciano.
+                    </li>
+                    <li>
+                        Cuarto de máquinas.
+                    </li>
+                    <li>
+                        Bombas.
+                    </li>
+                    <li>
+                        Instalación de techos/maya sombra.
+                    </li>
+                    <li>
+                        Instalación de paneles y calentadores solares para agua tibia, aljibes y cisternas.
+                    </li>
+                </ol>
                 </p>
             </article>
         </section>
+        <div id="carousel-services" class="carousel slide carousel-fade mx-auto mb-5 box-shadow-carousel" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <p class="mb-0">
+                        Albercas pequeñas
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Chapoteaderos
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Jacuzzy's
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Albercas comerciales
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Parques acuáticos
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Albercas olímplicas
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Albercas naturales
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Lagos artificiales
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Albercas de cristal
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Albercas en altura
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                        Albercas techadas
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                       Muros llorones
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                       Espejos de agua y con acabados, fuentes, porcelanato líquido.
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                       Acabados en piedra.
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <p class="mb-0">
+                       Cantera y material rústico y artesanal.
+                    </p>
+                </div>
+            </div>
+            <button 
+            class="carousel-control-prev mt-5" 
+            type="button" 
+            data-bs-target="#carousel-services" 
+            data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button 
+            class="carousel-control-next mt-5" 
+            type="button" 
+            data-bs-target="#carousel-services" 
+            data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">Diseño de Albercas a tu Medida</h2>
         <section class="contenedor seccion mt-0">
             <div class="grid" style="background-color:aliceblue">
@@ -971,6 +1083,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.colorbox/1.6.4/jquery.colorbox-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/carousel.js"></script>
     <script 
     src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
