--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </p>
             </article>
         </section>
-        <div id="carousel-services" class="carousel slide carousel-fade mx-auto mb-5 box-shadow-carousel" data-bs-ride="carousel">
+        <div id="carousel-services" class="carousel slide carousel-fade mx-auto mb-5 box-shadow-secundario" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <p class="mb-0">
