--- a/nosotros.html
+++ b/nosotros.html
@@ -118,35 +118,14 @@
         </div>
     </main>
     <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">Más Sobre Nosotros</h2>
-    <section class="contenedor seccion">
-        <div class="iconos-nosotros">
-            <div class="icono">
-                <img src="img/icono1.svg" alt="Icono Equipos">
-                <h3 class="subtitulos">Equipos</h3>
-                <p>
-                    Una alberca que funciona sin problemas es una alberca que trabaja con los mejores equipos y que son
-                    los adecuados para sus necesidades.
-                </p>
+    <section class="container">
+        <article class="row">
+            <div class="col-12 col-lg-6 text-justify mx-auto my-5 contenido-seccion-informacion box-shadow-secundario">
+                Apoyamos desde el diseño de su proyecto, con la elaboración de planos arquitectónicos, estructurales, eléctricos e
+                hidrosanitarios, estudio del área para futura construcción e instalación de equipo, permisos para construir su alberca y
+                la viabilidad de su proyecto.
             </div>
-
-            <div class="icono">
-                <img src="img/icono2.svg" alt="Icono Construcción">
-                <h3 class="subtitulos">Construcción</h3>
-                <p>
-                    Tener en cuenta factores como los materiales, la superficie, las dimensiones, los equipos y los
-                    accesorios es parte escencial para un proyecto exitoso.
-                </p>
-            </div>
-
-            <div class="icono">
-                <img src="img/icono3.svg" alt="Icono Vanguardia">
-                <h3 class="subtitulos">Vanguardia</h3>
-                <p>
-                    Soluciones tecnológicas y productos de última generación que responden a la demanda de tranquilidad,
-                    comodidad, ahorro y mejor funcionamiento.
-                </p>
-            </div>
-        </div>
+        </article>
     </section>
     <footer class="site-footer">
         <div class="container">
