--- a/nosotros.html
+++ b/nosotros.html
@@ -102,13 +102,13 @@
             <div class="texto-nosotros">
                 <blockquote class="subtitulos">30 Años de Experiencia</blockquote>
                 <h2 class="subtitulos">Misión</h2>
-                <p>
+                <p class="text-justify">
                     Bien y a la primera, garantizado nuestro trabajo, con la calidad que nos distingue, apoyándonos en
                     nuestra experiencia de más de 30 años en el mercado laboral, teniendo como referencia nuestros
                     trabajos realizados a las distintas empresas y organizaciones , tanto públicas como privadas.
                 </p>
                 <h2 class="subtitulos">Visión</h2>
-                <p>
+                <p class="text-justify">
                     Ser siempre de las primeras empresas especializadas en Sistemas de Acondicionado, manteniendo
                     nuestros estándares de calidad a la vanguardia, yendo de la mano con el avance tecnológico en todos
                     nuestros proyectos y mantenernos en constante crecimiento ingresando a nuevos mercados, incluso
@@ -117,7 +117,7 @@
             </div>
         </div>
     </main>
-    <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">Más Sobre Nosotros</h2>
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px my-4">Mas Sobre Nosotros</h2>
     <section class="container">
         <article class="row">
             <div class="col-12 col-lg-6 text-justify mx-auto my-5 contenido-seccion-informacion box-shadow-secundario">
