--- a/nosotros.html
+++ b/nosotros.html
@@ -121,6 +121,7 @@
     <section class="container">
         <article class="row">
             <div class="col-12 col-lg-6 text-justify mx-auto my-5 contenido-seccion-informacion box-shadow-secundario">
+                <i class="fa fa-thumb-tack"></i>
                 Apoyamos desde el diseño de su proyecto, con la elaboración de planos arquitectónicos, estructurales, eléctricos e
                 hidrosanitarios, estudio del área para futura construcción e instalación de equipo, permisos para construir su alberca y
                 la viabilidad de su proyecto.
