--- a/index.html
+++ b/index.html
@@ -186,100 +186,107 @@
                 </p>
             </article>
         </section>
-        <div id="carousel-services" class="carousel slide carousel-fade mx-auto mb-5 box-shadow-secundario" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <p class="mb-0">
-                        Albercas pequeñas
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Chapoteaderos
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Jacuzzy's
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Albercas comerciales
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Parques acuáticos
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Albercas olímplicas
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Albercas naturales
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Lagos artificiales
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Albercas de cristal
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Albercas en altura
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                        Albercas techadas
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                       Muros llorones
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                       Espejos de agua y con acabados, fuentes, porcelanato líquido.
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                       Acabados en piedra.
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <p class="mb-0">
-                       Cantera y material rústico y artesanal.
-                    </p>
+        <div class="container">
+            <div class="row">
+                <div 
+                id="carousel-services" 
+                class="carousel slide carousel-fade mx-auto mb-5 box-shadow-secundario col-md-6" 
+                data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <p class="mb-0">
+                                Albercas pequeñas
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Chapoteaderos
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Jacuzzy's
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Albercas comerciales
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Parques acuáticos
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Albercas olímplicas
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Albercas naturales
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Lagos artificiales
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Albercas de cristal
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Albercas en altura
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                                Albercas techadas
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                               Muros llorones
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                               Espejos de agua y con acabados, fuentes, porcelanato líquido.
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                               Acabados en piedra.
+                            </p>
+                        </div>
+                        <div class="carousel-item">
+                            <p class="mb-0">
+                               Cantera y material rústico y artesanal.
+                            </p>
+                        </div>
+                    </div>
+                    <button 
+                    class="carousel-control-prev mt-5" 
+                    type="button" 
+                    data-bs-target="#carousel-services" 
+                    data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button 
+                    class="carousel-control-next mt-5" 
+                    type="button" 
+                    data-bs-target="#carousel-services" 
+                    data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
-            <button 
-            class="carousel-control-prev mt-5" 
-            type="button" 
-            data-bs-target="#carousel-services" 
-            data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button 
-            class="carousel-control-next mt-5" 
-            type="button" 
-            data-bs-target="#carousel-services" 
-            data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
         <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px mb-4">Diseño de Albercas a tu Medida</h2>
         <section class="contenedor seccion mt-0">
