--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="row">
                 <div 
                 id="carousel-services" 
-                class="carousel slide carousel-fade mx-auto mb-5 box-shadow-secundario col-md-6" 
+                class="carousel slide carousel-fade mx-auto mb-5 box-shadow-secundario col-md-6 px-0" 
                 data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
